--- a/src/site/xdoc/manual/layouts.xml.vm
+++ b/src/site/xdoc/manual/layouts.xml.vm
@@ -1460,9 +1460,9 @@ WARN  [main]: Message 2</pre>
             <tr>
               <td align="center">
                 <a name="PatternMessage"/>
-                <b>m</b>{lookups}{ansi}<br />
-                <b>msg</b>{lookups}{ansi}<br />
-                <b>message</b>{lookups}{ansi}
+                <b>m</b>{ansi}<br />
+                <b>msg</b>{ansi}<br />
+                <b>message</b>{ansi}
               </td>
               <td>
                 <p>
@@ -1497,18 +1497,6 @@ WARN  [main]: Message 2</pre>
                   The call site can look like this:
                 </p>
                 <pre class="prettyprint linenums">logger.info("@|KeyStyle {}|@ = @|ValueStyle {}|@", entry.getKey(), entry.getValue());</pre>
-                <p>
-                  Use <code>{lookups}</code> to log messages like <code>logger.info("Try ${esc.d}{date:YYYY-MM-dd}")</code>
-                  using lookups, this will replace the date template <code>${esc.d}{date:YYYY-MM-dd}</code>
-                  with an actual date. This can be confusing in many cases, and it's often both easier and
-                  more obvious to handle the lookup in code.
-                  This feature is disabled by default and the message string is logged untouched.
-                </p>
-                <p>
-                  <b>Note: </b>Users are <b>STRONGLY</b> discouraged from using the lookups option. Doing so may allow uncontrolled user input
-                  containing lookups to take unintended actions. In almost all cases the software developer can accomplish the same tasks
-                  lookups perform directly in the application code.
-                </p>
               </td>
             </tr>
             <tr>
