--- a/src/changes/announcement.vm
+++ b/src/changes/announcement.vm
@@ -72,11 +72,12 @@ log4j-slf4j-impl should be used with SLF4J 1.7.x and earlier and log4j-slf4j18-i
 later. SLF4J-2.0.0 alpha releases are not fully supported. See https://issues.apache.org/jira/browse/LOG4J2-2975 and
 https://jira.qos.ch/browse/SLF4J-511.
 
-Some of the changes in Log4j 2.15.1 include:
+Some of the changes in Log4j ${relVersion} include:
 
+* Remove Message Lookups.
 * While release 2.15.0 removed the ability to resolve Lookups and log messages and addressed issues with how JNDI
 is accessed, the Log4j team feels that having JNDI enabled by default introduces an undue risk for our users.
-Starting in version 2.15.1, JNDI functionality is disabled by default and can be re-enabled via the
+Starting in version 2.16.0, JNDI functionality is disabled by default and can be re-enabled via the
 `log4j2.enableJndi` system property. Use of JNDI in an unprotected context is a large security risk and
 should be treated as such in both this library and all other Java libraries using JNDI.
 * Prior to version 2.15.0, Log4j would automatically resolve Lookups contained in the message or its parameters in the
