LOG4J2-3215 Update Gradle docs instructions

--- a/src/site/markdown/maven-artifacts.md.vm
+++ b/src/site/markdown/maven-artifacts.md.vm
@@ -59,7 +59,7 @@
 ```
 dependencies {
 #foreach($artifactId in $artifactIds)
-  compile group: 'org.apache.logging.log4j', name: '${artifactId}', version: '${version}'
+  implementation 'org.apache.logging.log4j:${artifactId}:${version}'
 #end
 }
 ```
