--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -2149,11 +2149,11 @@ public class AwesomeTest {
     </td>
   </tr>
   <tr>
-    <td><a name="enableJndi"/>log4j2.enableJndi</td>
-    <td>LOG4J_ENABLE_JNDI</td>
+    <td><a name="enableJndiJava"/>log4j2.enableJndiJava</td>
+    <td>LOG4J_ENABLE_JNDI_JAVA</td>
     <td>false</td>
     <td>
-      When true, Log4j components that use JNDI are enabled. When false, the default, they are disabled.
+      When true, Log4j components that use JNDI java protocol are enabled. When false, the default, they are disabled.
     </td>
   </tr>
   <tr>
