--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -45,6 +45,12 @@ $h4 Mitigation
 From version 2.17.0 (for Java 8), only lookup strings in configuration are expanded recursively;
 in any other usage, only the top-level lookup is resolved, and any nested lookups are not resolved.
 
+In prior releases this issue can be mitigated by ensuring your logging configuration does the following:
+* Replace Context Lookups like `$${ctx:loginId}` in PatternLayout with Thread Context Map patterns (%X, %mdc, or %MDC)
+  in the logging configuration.
+* Remove refrences to Context Lookups like `$${ctx:loginId}` in the configuration where they originate
+  from sources external to the application such as HTTP headers or user input.
+
 $h4 Reference
 Please refer to the [Security page](security.html#CVE-2021-45105) for details and mitigation measures for older versions of Log4j.
 
