--- a/src/changes/announcement.vm
+++ b/src/changes/announcement.vm
@@ -20,19 +20,19 @@
 #set($relVersion=$announceParameters.releaseVersion)
 #set($relCount=$announceParameters.releaseCount)
 #macro(formatAction $item)
-## Use replaceAll to fix up LF-only line ends on Windows.
-## Also replace < and > with entity versions to avoid HTML being misinterpreted.
-#set($action=$item.action.replaceAll("\n","
+    ## Use replaceAll to fix up LF-only line ends on Windows.
+    ## Also replace < and > with entity versions to avoid HTML being misinterpreted.
+    #set($action=$item.action.replaceAll("\n","
 ").replaceAll("<", "&lt;").replaceAll(">", "&gt;"))
-#if($item.issue)
-#set($issue = $item.issue)
-#set($url = "https://issues.apache.org/jira/browse/$issue")
-#else
-#set($issue = "")
-#end
+    #if($item.issue)
+        #set($issue = $item.issue)
+        #set($url = "https://issues.apache.org/jira/browse/$issue")
+    #else
+        #set($issue = "")
+    #end
 * #if($issue)[$issue]($url):#end
 
-${action}#if($item.dueTo) Thanks to ${item.dueTo}.#end
+    ${action}#if($item.dueTo) Thanks to ${item.dueTo}.#end
 
 #end
 ## -----------------------------------------
@@ -65,7 +65,11 @@ temporary objects) while logging. In addition, Log4j 2 will not lose events whil
 
 The artifacts may be downloaded from https://logging.apache.org/log4j/2.x/download.html.
 
-This release contains one change which is noted below.
+This release contains the changes noted below:
+
+* Address CVE-2021-45105.
+* Require components that use JNDI to be enabled individually via system properties.
+* Remove LDAP and LDAPS as supported protocols from JNDI.
 
 Due to a break in compatibility in the SLF4J binding, Log4j now ships with two versions of the SLF4J to Log4j adapters.
 log4j-slf4j-impl should be used with SLF4J 1.7.x and earlier and log4j-slf4j18-impl should be used with SLF4J 1.8.x and
@@ -74,14 +78,10 @@ https://jira.qos.ch/browse/SLF4J-511.
 
 Some of the changes in Log4j ${relVersion} include:
 
-* Remove Message Lookups.
-* While release 2.15.0 removed the ability to resolve Lookups and log messages and addressed issues with how JNDI
-is accessed, the Log4j team feels that having JNDI enabled by default introduces an undue risk for our users.
-Starting in version 2.16.0, JNDI functionality is disabled by default and can be re-enabled via the
-`log4j2.enableJndi` system property. Use of JNDI in an unprotected context is a large security risk and
-should be treated as such in both this library and all other Java libraries using JNDI.
-* Prior to version 2.15.0, Log4j would automatically resolve Lookups contained in the message or its parameters in the
-Pattern Layout. This behavior is no longer the default and must be enabled by specifying %msg{lookup}.
+* Disable recursive evaluation of Lookups during log event processing. Recursive evaluation is still allwoed while
+generating the configuration.
+* The JndiLookup, JndiContextSelector, and JMSAppender now require individual system properties to be enabled.
+* Removed support for the LDAP and LDAPS protocols via JNDI.
 
 The Log4j ${relVersion} API, as well as many core components, maintains binary compatibility with previous releases.
 
@@ -132,3 +132,4 @@ For complete information on ${project.name}, including instructions on how to su
 reports, patches, or suggestions for improvement, see the Apache ${project.name} website:
 
 ${project.url}
+
